--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -20,12 +20,12 @@ body {
 }
 
 a {
-  color: #106eea;
+  color: #31696e;
   text-decoration: none;
 }
 
 a:hover {
-  color: #3b8af2;
+  color: #31696e;
   text-decoration: none;
 }
 
@@ -57,7 +57,7 @@ h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #106eea;
+  border: 6px solid #31696e;
   border-top-color: #e2eefd;
   border-radius: 50%;
   width: 60px;
@@ -85,7 +85,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #4D58C2;
+  background: #31696e;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -99,7 +99,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #4D58C2;
+  background: #31696e;
   color: #fff;
 }
 
@@ -121,7 +121,7 @@ h6 {
 # Top Bar
 --------------------------------------------------------------*/
 #topbar {
-  background: #106eea;
+  background: #31696e;
   height: 40px;
   font-size: 14px;
   transition: all 0.5s;
@@ -185,15 +185,15 @@ h6 {
   font-weight: 600;
   letter-spacing: 0.8px;
   font-family: "Tajawal";
-  color: #05482a;
+  color: #31696e;
 }
 
 #header .logo a {
-  color: #05482a;
+  color: #31696e;
 }
 
 #header .logo a span {
-  color: #05482a;
+  color: #31696e;
 }
 
 #header .logo img {
@@ -263,7 +263,7 @@ h6 {
   height: 2px;
   bottom: -6px;
   left: 0;
-  background-color: #05482a;
+  background-color: #31696e;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -280,7 +280,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #05482a;
+  color: #31696e;
 }
 
 .navbar .dropdown ul {
@@ -314,7 +314,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #05482a;
+  color: #31696e;
 }
 
 .navbar .dropdown:hover>ul {
@@ -424,7 +424,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #05482a;
+  color: #31696e;
 }
 
 .navbar-mobile .getstarted,
@@ -486,7 +486,7 @@ h6 {
 
 #hero:before {
   content: "";
-  background: linear-gradient(to bottom, #0B666A 0%, #116b70, #25767a 100%);
+  background: #31696e;
   position: absolute;
   bottom: 0;
   top: 0;
@@ -509,7 +509,7 @@ h6 {
 }
 
 #hero h1 span {
-  color: #4D58C2;
+  color: #31696e;
 }
 
 #hero h2 {
@@ -550,7 +550,7 @@ h6 {
 }
 
 #hero .btn-watch-video i {
-  color: #106eea;
+  color: #31696e;
   font-size: 32px;
   transition: 0.3s;
   line-height: 0;
@@ -558,11 +558,11 @@ h6 {
 }
 
 #hero .btn-watch-video:hover {
-  color: #106eea;
+  color: #31696e;
 }
 
 #hero .btn-watch-video:hover i {
-  color: #3b8af2;
+  color: #31696e;
 }
 
 @media (min-width: 1024px) {
@@ -623,7 +623,7 @@ section {
   padding: 8px 20px;
   margin: 0;
   background: #e7f1fd;
-  color: #106eea;
+  color: #31696e;
   display: inline-block;
   text-transform: uppercase;
   border-radius: 50px;
@@ -636,7 +636,7 @@ section {
 }
 
 .section-title h3 span {
-  color: #106eea;
+  color: #31696e;
 }
 
 .section-title p {
@@ -652,7 +652,7 @@ section {
 
 .modal-footer button {
 
-  background-color: #4D58C2; 
+  background-color: #31696e; 
   color: white;
 }
 
@@ -738,7 +738,7 @@ section {
 }
 
 .featured-services .icon-box:hover::before {
-  background: #4D58C2;
+  background: #31696e;
   top: 0;
   border-radius: 0px;
 }
@@ -750,7 +750,7 @@ section {
 .featured-services .icon i {
   font-size: 48px;
   line-height: 1;
-  color: #4D58C2;
+  color: #31696e;
   transition: all 0.3s ease-in-out;
 }
 
@@ -809,7 +809,7 @@ section {
   font-size: 24px;
   padding: 20px;
   margin-right: 15px;
-  color: #106eea;
+  color: #31696e;
   border-radius: 50px;
 }
 
@@ -860,7 +860,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #106eea;
+  background-color: #31696e;
 }
 
 /*--------------------------------------------------------------
@@ -884,7 +884,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 24px;
-  background: #106eea;
+  background: #31696e;
   color: #fff;
   width: 56px;
   height: 56px;
@@ -944,7 +944,7 @@ section {
   padding: 80px 20px;
   transition: all ease-in-out 0.3s;
   background: #fff;
-  color: #4D58C2;
+  color: #31696e;
 }
 
 .services .icon-box .icon {
@@ -974,7 +974,7 @@ section {
 }
 
 .services .icon-box h4 a {
-  color: #4D58C2;
+  color: #31696e;
   transition: ease-in-out 0.3s;
 }
 
@@ -991,11 +991,11 @@ section {
 
 .services .icon-box:hover h4 a,
 .services .icon-box:hover .icon i {
-  color: #4D58C2;
+  color: #31696e;
 }
 
 .services .icon-box:hover .icon {
-  border-color: #106eea;
+  border-color: #31696e;
 }
 /* .btn-primary{
   margin-right: 100px;
@@ -1094,7 +1094,7 @@ section {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #106eea;
+  background-color: #31696e;
 }
 
 @media (min-width: 992px) {
@@ -1130,7 +1130,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #106eea;
+  color: #31696e;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -1177,7 +1177,7 @@ section {
 
 .portfolio .portfolio-item .portfolio-info .preview-link:hover,
 .portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #106eea;
+  color: #31696e;
 }
 
 .portfolio .portfolio-item .portfolio-info .details-link {
@@ -1203,7 +1203,7 @@ section {
 }
 
 .portfolio .portfolio-item .portfolio-links a:hover {
-  color: #6ba7f5;
+  color: #31696e;
 }
 
 .portfolio .portfolio-item:hover .portfolio-info {
@@ -1232,11 +1232,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #106eea;
+  border: 1px solid #31696e;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #106eea;
+  background-color: #31696e;
 }
 
 .portfolio-details .portfolio-info {
@@ -1314,7 +1314,7 @@ section {
   border-radius: 4px;
   width: 36px;
   height: 36px;
-  background: rgba(16, 110, 234, 0.8);
+  background: #31696e;
   display: inline-block;
   transition: ease-in-out 0.3s;
   color: #fff;
