--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1871,3 +1871,26 @@ margin-right: 70px;
 }   
 
 
+
+.flex-container {
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: rgb(255, 255, 255);
+  flex-wrap:wrap-reverse;
+  justify-content: center;
+}
+
+.flex-container > div {
+  background-color: #999090;
+  width: 300px;
+  height: 150px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
+}
+
+.flex-container .title{
+  padding-top: 3rem;
+}
+
